--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,8 @@
 @import "tailwindcss";
+@custom-variant dark (&:where(.dark, .dark *));
+
+.container {
+    max-width: 1100px;
+    width: 100%;
+    margin: 0 auto;
+}
