--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,23 @@
 @import "tailwindcss";
 @custom-variant dark (&:where(.dark, .dark *));
 
+@keyframes leftright {
+
+    0%,
+    100% {
+        transform: translateX(0);
+    }
+
+    50% {
+        transform: translateX(20px);
+        /* adjust distance */
+    }
+}
+
+.animate-leftright {
+    animation: leftright 2s ease-in-out infinite;
+}
+
 .container {
     max-width: 1100px;
     width: 100%;
