--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,19 @@
     width: 100%;
     margin: 0 auto;
 }
+
+
+@keyframes marquee {
+    0% {
+        transform: translateX(0%);
+    }
+
+    100% {
+        transform: translateX(-50%);
+    }
+}
+
+.animate-marquee {
+    display: flex;
+    animation: marquee 40s linear infinite;
+}
